# ASimpleLife

./: Cargo.toml  README.md
.cargo/: config.toml
src/: app.rs  benchmark.rs  bitgrid.rs  cache_policy.rs  classify.rs  cli.rs  engine.rs  flat_table.rs  generators.rs  hashing.rs  hashlife.rs  lib.rs  life.rs  life_grid_format.rs  main.rs  memo.rs  normalize.rs  oracle.rs  persistence.rs  render.rs  simd_layout.rs  symmetry.rs  term.rs  tests.rs
src/benchmark/: report.rs  runtime.rs  suite.rs
src/bf/: bf.c.in  bf_super.c.in  bflife.rs  c_backend.rs  c_support.rs  cli.rs  codegen.rs  ir.rs  life_backend.rs  life_macro_library.rs  lowered_ir.rs  mod.rs  optimizer.rs  tests.rs
src/bf/c_super_backend/: analysis.rs  emit.rs  mod.rs  planner.rs
src/bf/tests/: c_super_backend.rs  life.rs  mod.rs  optimizer.rs
src/hashlife/: canonical.rs  embed.rs  gc.rs  node.rs  session.rs  signature.rs  simd.rs  snapshot.rs  stats.rs  test_probes.rs
src/hashlife/canonical/: results.rs
src/hashlife/scheduler/: deps.rs  discovery.rs  flush.rs  mod.rs
src/hashlife/scheduler/discovery/: arena.rs
src/hashlife/simd/: builders.rs
src/oracle/: checkpoints.rs  patterns.rs  policy.rs  runtime.rs  session.rs
src/tests/: correctness.rs  correctness_bench.rs  hashlife.rs  hashlife_cache.rs  hashlife_correctness.rs  hashlife_diagnostics.rs  hashlife_scheduler.rs  hashlife_support.rs  life.rs  main_tests.rs  mod.rs  oracle.rs
