[package]
name = "a_simple_life"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release-debug]
inherits = "release"
debug = true

[dependencies]
bytemuck = { version = "1.25.0", features = ["must_cast"] }
libc = "0.2.183"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wide = { version = "1.1.1", features = ["serde"] }
